[project]
name = "timcol"
version = "0.1.0"
description = "Time tracking on the command line."
authors = [
    { name = "itsjohncs", email = "johnsullivan.pem@gmail.com" }
]
dependencies = [
    "dateparser>=1.2.0",
    "tabulate>=0.9.0",
    "pystache>=0.6.5",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
"timcol" = "timcol.tool.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.3.2",
    "pyfakefs>=5.6.0",
    "time-machine>=2.14.2",
    "tzdata>=2024.1",
    "tox>=4.16.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/timcol"]

[tool.pyright]
venvPath = "."
venv = ".venv"
stubPath = "./typestubs"
